:memo: add jvm about.